<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">
    <com.example.sudoku.view.custom.SudokuBoard
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sudokuBoard"
        android:layout_above="@+id/buttonsLayout"
        android:layout_marginBottom="40dp"/>

    <GridLayout
        android:id="@+id/buttonsLayout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/oneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_column="0"
            android:layout_row="0"/>
        <Button
            android:id="@+id/twoBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="0"
            android:layout_column="1"/>
        <Button
            android:id="@+id/threeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="0"
            android:layout_column="2"/>

        <Button
            android:id="@+id/fourBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="1"
            android:layout_column="0"/>
        <Button
            android:id="@+id/fiveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="1"
            android:layout_column="1"/>
        <Button
            android:id="@+id/sixBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="1"
            android:layout_column="2"/>
        <Button
            android:id="@+id/sevenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="2"
            android:layout_column="0"/>
        <Button
            android:id="@+id/eightBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="2"
            android:layout_column="1"/>
        <Button
            android:id="@+id/nineBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_row="2"
            android:layout_column="2"/>

    </GridLayout>


</RelativeLayout>